# SHA1-Haskell

./: README.md  SHA1-Haskell.cabal
src/: SHA1.hs
test/: SHA1Test.hs
