cabal-version:      3.0
name:               SHA1-Haskell
version:            0.2.0.0
synopsis:
description:
homepage:           github.com/dominicmkennedy/SHA1-Haskell
license:            MIT
license-file:       LICENSE
author:             dominicmkennedy
maintainer:         dominicmkennedy@gmail.com

library
    exposed-modules:  SHA1
    build-depends:
      base >=4.15 && <5,
      bytestring,
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite SHA1-Haskell-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          SHA1Test.hs
    build-depends:
      base >=4.15 && <5,
      hspec ^>=2.10.0,
      SHA1-Haskell,
      bytestring,
    ghc-options:        -Wall
